force-app/main/default/objects/DC_Rack_Layout__c/DC_Rack_Layout__c.object-meta.xml
<CustomObject>
    <label>Rack Layout</label>
    <nameField>
        <label>Rack Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rack Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>