force-app/main/default/objects/DC_Rack_Layout__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;  Panel__r.Asset__r.AccountId ,  Panel__r.Asset__r.Account.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>