force-app/main/default/objects/DC_Rack_Layout__c/fields/Panel__c.field-meta.xml
<CustomField>
    <fullName>Panel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Panel</label>
    <referenceTo>DC_Panel__c</referenceTo>
    <relationshipLabel>Rack Layouts</relationshipLabel>
    <relationshipName>Rack_Layouts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>