force-app/main/default/objects/DC_Rack_Layout__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position on the Rack. Number 1 is the bottom RU position.</description>
    <label>Position</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>