force-app/main/default/objects/DC_Rack_Layout__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rack this Rack Layout belongs to.</description>
    <label>Rack</label>
    <referenceTo>DC_Rack__c</referenceTo>
    <relationshipLabel>Rack Layouts</relationshipLabel>
    <relationshipName>Rack_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>